--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "eslint": "^5.3.0",
     "react": "^16.4.2",
+    "react-confirm-alert": "^2.0.5",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4",
-    "react-table": "^6.8.6"
+    "react-table": "^6.8.6",
+    "react-toastify": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
