--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "eslint": "^5.3.0",
     "react": "^16.4.2",
     "react-confirm-alert": "^2.0.5",
+    "react-csv": "^1.0.14",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4",
     "react-skylight": "^0.5.1",
