--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.5.0",
-    "eslint": "^5.3.0",
     "react": "^16.4.2",
     "react-confirm-alert": "^2.0.5",
     "react-csv": "^1.0.14",
@@ -19,5 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "eslint": "^5.4.0"
   }
 }
