--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4",
     "react-skylight": "^0.5.1",
-    "react-table": "^6.8.6",
-    "react-toastify": "^4.2.0"
+    "react-table": "^6.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
