--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "enzyme": "^3.4.4",
+    "enzyme-adapter-react-16": "^1.2.0",
     "eslint": "^5.4.0",
     "react-test-renderer": "^16.4.2"
   }
